--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -139,8 +139,8 @@ jobs:
         run: |
           $data = Get-Content -Raw -Path "${{ github.workspace }}\files_modified.json" | ConvertFrom-Json 
           foreach( $i in $data ) {
-            &"${{ github.workspace }}\\checker\ifcCheckingTool_Lite.exe" "$($i)" /hidegui /xmlfile="${{ github.workspace }}\results\$($i).xml"
-            Write-Host "Checked:" $i
+            &"${{ github.workspace }}\\checker\ifcCheckingTool_Lite.exe" $("$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$i.xml")
+            Write-Host "Checked:" $("$i") "and wrote to" $("\results\$i.xml")
           }
       - name: Dir currect directory
         if: always()
