--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -141,7 +141,8 @@ jobs:
           foreach( $i in $data ) {
             $filename = $("$i").Substring($("$i").LastIndexOf("/")+1)
             Write-Host "Checking filename:" $("$filename")
-            &"${{ github.workspace }}\\checker\ifcCheckingTool_Lite.exe" $("${{ github.workspace }}\$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$filename.xml")
+            Write-Host "Running:" "${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" $("${{ github.workspace }}\$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$filename.xml")
+            &"${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" $("${{ github.workspace }}\$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$filename.xml")
             Write-Host "Checked:" $("${{ github.workspace }}\$i") "and wrote to" $("${{ github.workspace }}\results\$filename.xml")
           }
       - name: Dir currect directory
