Counting results, validating results

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -101,6 +101,7 @@ jobs:
             &"${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" $("${{ github.workspace }}\$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$filename.xml") 
           }
       - name: Check modified files
+        id: checking
         if: needs.filter.outputs.modifcs == 'true'
         run: |
           $data = '${{ needs.filter.outputs.modjson }}' | ConvertFrom-Json
@@ -108,17 +109,35 @@ jobs:
             $filename = $("$i").Substring($("$i").LastIndexOf("/")+1)
             Write-Host "Running:" "${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" $("${{ github.workspace }}\$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$filename.xml")
             Write-Host "Checking filename:" $("$filename") "writing to" $("${{ github.workspace }}\results\$filename.xml")
-            &"${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" '$("${{ github.workspace }}\$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$filename.xml")'
+            &"${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" $("${{ github.workspace }}\$i") /hidegui /xmlfile=$("${{ github.workspace }}\results\$filename.xml")
           }
-      - name: Dir currect directory
+      - name: Analyse results directory
+        id: results
         if: always()
         run: |
-          dir .
           dir results
+          $noOfResults = ( Get-ChildItem results | Measure-Object ).Count;
+          if($noOfResults -ge 2){
+            echo ::set-output name=haslogs::true;
+          } else {
+            echo ::set-output name=haslogs::false;            
+          }
       - name: Upload check results
         if: needs.filter.outputs.modifcs == 'true' || needs.filter.outputs.addifcs == 'true'
         uses: actions/upload-artifact@v2
         with:
           name: checking_results
           path: ${{ github.workspace }}\results
-
+  validate:
+    runs-on: ubuntu-latest
+    needs: check
+    if: needs.check.results.outputs.haslogs == 'true'
+      jobs:
+      - name: Load log files from check
+        uses: actions/download-artifact@v2
+        with:
+          name: checking_results
+      - name: Print files
+        run: |
+          dir .
+          dir checking_results
