inside out parameters?

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -111,7 +111,7 @@ jobs:
             $filename = $("$i").Substring($("$i").LastIndexOf("/")+1)
             Write-Host "Checking filename:" "$("$filename")" " --> writing to" "$("${{ github.workspace }}\results\$filename.xml")"
             Write-Host "Running:" "${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" "$("${{ github.workspace }}\$i")" /hidegui /xmlfile="$("${{ github.workspace }}\results\$filename.xml")"
-            &"\"${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe\" $(\"${{ github.workspace }}\$i\") /hidegui /xmlfile=$(\"${{ github.workspace }}\results\$filename.xml\")"
+            &"\"${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe\" \"$(${{ github.workspace }}\$i)\" /hidegui /xmlfile=\"$(${{ github.workspace }}\results\$filename.xml)\""
           }
       - name: Analyse results directory
         id: results
