totally splitting off variables

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -114,7 +114,7 @@ jobs:
             Write-Host "Running:" "${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" "$("${{ github.workspace }}\$i")" /hidegui /xmlfile="$("${{ github.workspace }}\results\$filename.xml")"
             $ifcFilePath = $("${{ github.workspace }}\$i")
             $xmlFilePath = $("${{ github.workspace }}\results\$filename.xml")
-            & $("$cmnd") $("`"$ifcFilePath`"") /hidegui /xmlfile=$("`"$xmlFilePath`"")
+            & $cmnd $ifcFilePath /hidegui /xmlfile=$xmlFilePath
           }
       - name: Analyse results directory
         id: results
