Counting the logs

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -68,6 +68,8 @@ jobs:
     defaults:
       run:
         shell: pwsh
+    outputs:
+      haslogs: ${{ steps.results.outputs.haslogs }}
     steps:
       - name: Verify the workspace context
         run: echo 'Workspace directory is ${{ github.workspace }}'
@@ -136,13 +138,38 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     needs: check
-    if: needs.check.results.outputs.haslogs == 'true'
+    if: needs.check.outputs.haslogs == 'true'
     steps:
       - name: Load log files from check
         uses: actions/download-artifact@v2
         with:
           name: checking_results
-      - name: Print files
+      - name: Dir files
         run: |
           dir .
           dir checking_results
+      - name: Parse logs
+        id: counting
+        run: |
+          $total = 0
+          $error_elements = "//MVDReport.MVDMessageSet"
+          Get-ChildItem checking_results -Filter "*.xml" | 
+          Foreach-Object {
+            [System.Xml.XmlDocument] $document = New-Object System.Xml.XmlDocument
+            $document.load($_.FullName)
+            $found_elements = $document.selectnodes($element_xpath)
+            Write-Host $found_elements.count.ToString("n0") elements in $_.Name
+          }
+          if( $total -ge 1 ) {
+            echo "::set-output name=logging::true"
+          } else {
+            echo "::set-output name=logging::false"            
+          }
+      - name: Fail validation
+        uses: actions/github-script@v3
+        if: steps.counting.outputs.logging == 'true'
+        with:
+          script: |
+            core.setFailed('There have been error messages')
+
+
