storing artifacts in folder

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -144,6 +144,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: checking_results
+          path: checking_results
       - name: Dir files
         run: |
           dir .
