copying files around

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -107,10 +107,11 @@ jobs:
             Write-Host "Checking filename:" "$("$filename")" " --> writing to" "$("${{ github.workspace }}\results\$filename.xml")"
             Write-Host "Running:" "${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" "$("${{ github.workspace }}\$i")" /hidegui /xmlfile="$("${{ github.workspace }}\results\$filename.xml")"
             $ifcFilePath = $("${{ github.workspace }}\$i")
+            $ifcCopyFilePath = $("${{ github.workspace }}\results\$i")
             $xmlFilePath = $("${{ github.workspace }}\results\$filename.xml")
             & $cmnd $ifcFilePath /hidegui /xmlfile=$xmlFilePath
-            Write-Host "Last exit code was:" $LastExitCode
-            Copy-Item "$("$ifcFilePath")" -Destination "$("${{ github.workspace }}/results/$i")"
+            Write-Host "Last exit code was:" "$LastExitCode"
+            Copy-Item $ifcFilePath -Destination $ifcCopyFilePath
           }
       - name: Check modified files
         if: needs.filter.outputs.modifcs == 'true'
@@ -122,10 +123,11 @@ jobs:
             Write-Host "Checking filename:" "$("$filename")" " --> writing to" "$("${{ github.workspace }}\results\$filename.xml")"
             Write-Host "Running:" "${{ github.workspace }}\checker\ifcCheckingTool_Lite.exe" "$("${{ github.workspace }}\$i")" /hidegui /xmlfile="$("${{ github.workspace }}\results\$filename.xml")"
             $ifcFilePath = $("${{ github.workspace }}\$i")
+            $ifcCopyFilePath = $("${{ github.workspace }}\results\$i")
             $xmlFilePath = $("${{ github.workspace }}\results\$filename.xml")
             & $cmnd $ifcFilePath /hidegui /xmlfile=$xmlFilePath
-            Write-Host "Last exit code was:" $LastExitCode
-            Copy-Item "$("$ifcFilePath")" -Destination "$("${{ github.workspace }}/results/$i")"
+            Write-Host "Last exit code was:" "$LastExitCode"
+            Copy-Item $ifcFilePath -Destination $ifcCopyFilePath
           }
       - name: Analyse results directory
         id: results
